new response model added as well as get user details by skill id added